add user managment (#1)
* add user managment

* fix: docker not building for frontend

* fix: logout button not redirecting to login screen

* fix: bugs related to user handling

* add: filtering for users on frontend

* add: liquig (gl)ass esque frontend style

* downgrade java version, formatting and create dev/prod envs

* refactor: test to use gson converter for dtos

* cleanup code

* add: javadoc/jsdoc to functions and classes

* refactor: filtering for listing api's